# CLI11

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  c++  output.txt  sein  test.json
src/: hello.cc  helloworld.cc  lagerhalterung.json  lagerhalterungsystem.cc  static_machine_lagersystem.cc  test.json
src/andere_dateien/: lagerhalterungsystem.cc.backup  static_machine_test.cc  test_state_machine_lagersystem.cc  zweite_lagerhalterung.json
